# NTHU-Data-API

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  MIGRATION_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: black.yml  formatter.yml  lint.yml  pre-commit.yml  routine_testing.yml  smokeshow.yml  sonarcloud.yml  tests.yml
data/: buses_nanda.json  dinings_data.json  energy_sys.json  newsletter_list.json  templates.json
data/anecdotes/: anecdotes.json
data/courses/: 11120.json  11220.json  course.json
data/directory/crawler/: crawler.py  departments.json  dept.json
data/directory/phone/: phone.json  phone.py  phone_data.py
data/format_data/scripts/: data_node.py  location_data_node.py  location_formatter.py  phone_data_node.py  phone_formatter.py
data/formatted/: contacts.json  location.json
data/locations/crawler/: nanda_unofficial.json  official.py  unofficial.py
data/questions/: questions.json
data/restaurant/: not_restaurant.json  restaurant.json
docs/: DATA_MANAGER_ARCHITECTURE.md
kubernetes/: deployment.yaml
scripts/: data_node.py
scripts/location/: location_formatter.py
scripts/location_data/: location_data_node.py  location_formatter.py
scripts/locations/: en.json  zh.json
scripts/phone_data/: phone_data_node.py  phone_formatter.py
scripts/ssl/: generate_ssl.py
src/: __init__.py  config.py  data.py
src/api/: __init__.py
src/api/models/: data.py  (+13 more)
src/data_api/: __init__.py
src/utils/: __init__.py  cached_request.py  cached_requests.py  ckip.py  data_manager.py  nthudata.py  schema.py
tests/: fuzzysearch.py  test_announcements.py  test_api_endpoints.py  test_bulletins.py  test_buses.py  test_buses_graph.py  test_careers.py  test_contacts.py  test_courses.py  test_courses_models.py  test_data_manager.py  test_default.py  test_departments.py  test_dining.py  test_energy.py  test_events.py  test_exceptions.py  test_libraries.py  test_locations.py  test_mcp_tools.py  test_newsletter.py  test_newsletters.py  test_phones.py  test_scrapers.py  test_services.py  test_utils.py
(+450 files in other folders)
