[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nthu-data-api"
version = "2.0.0"
description = "NTHU Data API"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "NTHU-SA", email = "it@nthusa.tw"}
]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}
test = {file = ["requirements-tests.txt"]}

[tool.setuptools]
packages = ["data_api"]
package-dir = {"" = "src"}

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.black]
line-length = 100
target-version = ['py314']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
